fixing iframe size on small screens

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -608,10 +608,6 @@ footer a img {
     position: static;
     padding: 0 1em;
   }
-  #videorow,
-  #videorow iframe {
-    height: 480px;
-  }
   
   .mailingform form {
     width: 100%;
